# refboard

./: .gitignore  Cargo.toml  references.md
test-app/: Cargo.toml
test-app/src/: app.rs  main.rs  painter.rs  renderer.rs  shaders.wgsl  ui.rs  util.rs  view.rs
test-app/src/ui/: hierarchy.rs  input.rs  layout.rs  state_box.rs  style.rs  system.rs  text.rs  viewport.rs  widget.rs  widget_config.rs  widget_ref.rs  widgets.rs
test-app/src/ui/widgets/: button.rs  checkbox.rs  slider.rs  spring.rs  text.rs  text_edit.rs  toggle.rs
test-app/src/view/: ui.rs
test-app/src/view/ui/: hierarchy.rs  layout.rs  style.rs  widget.rs  widgets.rs
