[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
lyon = "1.0"
env_logger = "0.9.0"

wgpu = "0.19"
winit = "0.29"
bytemuck = "1.2.0"
anyhow = "1.0.81"

tokio = { version = "1", features = ["full"] }
windows = { version = "0.54", features = ["Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6.0"
