[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
lyon = { version = "1.0", features = ["extra"] }
env_logger = "0.9.0"

wgpu = "0.19"
winit = "0.30"

bytemuck = "1.2.0"
anyhow = "1.0.81"
slotmap = { version = "1.0", features = ["serde"] }
bitflags = "2.5"

smallvec = "1.13"

# tokio = { version = "1", features = ["full"] }
pollster = "0.3"
raw-window-handle = "0.6.0"

common = { git = "https://github.com/manpat/common-rs.git", rev="911fd5e" }

cosmic-text = "0.11"
unicode-segmentation = "1.11"
material-colors = "0.3.3"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = { version = "0.10", optional = true }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_UI_WindowsAndMessaging"] }

[features]
default = ["tracy"]
tracy = ["dep:tracing-tracy"]